hero spacing fix

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -84,6 +84,7 @@
   grid-template-columns: 1fr 1fr;
   max-width: 130rem;
   margin: 0 auto;
+  padding: 0 3.2rem;
   /* padding: 6.4rem 0; */
   color: #fff;
 }
